--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		color: ;
 		}
 		</style>
-		<link rel="stylesheet" type="text/css" href="http://shrmpy.github.io/twitch/css/default.css" />
-		<link rel="stylesheet" type="text/css" href="http://shrmpy.github.io/twitch/css/component.css" />
-		<script src="http://shrmpy.github.io/twitch/js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="https://shrmpy.github.io/twitch/css/default.css" />
+		<link rel="stylesheet" type="text/css" href="https://shrmpy.github.io/twitch/css/component.css" />
+		<script src="https://shrmpy.github.io/twitch/js/modernizr.custom.js"></script>
 	
 	</head>
 	<body>
