--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<ul>
+		<li>itch.io Ukraine bundle gone, though the charities are <a 
+		href="https://internationalmedicalcorps.org/country/ukraine/">Intl Med Corps</a>
+			and <a href="https://voices.org.ua/en/who-we-are/">Voice of Children</a></li>
 		<li><a 
 		href="https://give.unrefugees.org/220224ukr_emer_d_4983/">
 				Blake Lively & Ryan Reynolds UNHCR campaign</a></li>
@@ -15,11 +18,9 @@
 		href="https://gofund.me/3ed9eddb">
 				Mila Kunis & Ashton Kutcher</a></li>
 
-
 		<li><a 
 		href="https://www.moas.eu/moas-mission-ukraine/">
 				MOAS</a></li>
-
 
 		<li><a 
 		href="https://www.forbes.com/advisor/personal-finance/donate-relief-to-ukraine">
