--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<ul>
+		<li><a
+		href="https://soundsofsurvival.bandcamp.com/">Sounds of Survival on Bandcamp</a></li>
+
 		<li>itch.io Ukraine bundle gone, though the charities are <a 
 		href="https://internationalmedicalcorps.org/country/ukraine/">Intl Med Corps</a>
 			and <a href="https://voices.org.ua/en/who-we-are/">Voice of Children</a></li>
