--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
 	<ul>
 		<li><a
+		href="https://www.humblebundle.com/stand-with-ukraine-bundle"
+		>Stand with Ukraine Humble Bundle</a></li>
+
+		<li><a
+		href="https://www.fanatical.com/en/bundle/stand-with-ukraine-charity-bundle"
+		>Fanatical "Stand with Ukraine" Bundle</a></li>
+
+		<li><a
 		href="https://gofund.me/634f5877"
 		>Bakehouse, Bake for Ukraine</a></li>
 
